# finabm

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements-test.txt
finabm/: __about__.py  __init__.py  base.py  dollar.py  fundamental.py  minority.py  prediction.py  simulate.py
reports/: _quarto.yml
reports/mg-basic/: mg-basic.qmd
reports/mg-core/: make_fig21.py  make_fig22_top.py  mg-core.qmd
reports/pg-main/: make_data.py  make_fig1.py  make_fig2.py
reports/xg-main/: make_data.py  make_fig1.py  make_fig2.py
tests/: test_dollar.py  test_minority.py
